# KU-2024-CGIP-HW5-2

./: .gitignore  CMakeLists.txt  KU-2024-CGIP-HW5-2.cpp  README.md
